# whimsy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
arithmetic/: base.py  constants.py  decoder.py  encoder.py
compress/: text.py  utils.py
