[tool.poetry]
name = "whimsy"
version = "0.0.1"
description = "probabilistic compression using large language models"
authors = ["wizenheimer <nayan.kumar@couchbase.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^1.26.4"
more-itertools = "^10.2.0"
tqdm = "^4.66.4"
llama-cpp-python = "^0.2.77"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
